<resources>
    <string name="app_name">Focus Planner</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="login">Log in</string>
    <string name="register_now">Register Now</string>
    <string name="signup">Sign Up</string>
    <string name="need_an_account">Need an Account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Log In</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="open_navigation_drawer">Open navigation drawer</string>
    <string name="close_navigation_drawer">Close navigation drawer</string>
    <string name="powered_by">Powered by FocusPlanner.co</string>
    <string name="fullname">Fullname</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="update_password">Update Password</string>
    <string name="update_name">Update Name</string>
    <string name="enter_name">Enter name</string>
    <string name="submit">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>

